<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/bla">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.lenovo.resumae.Skill">

        <TextView
            android:id="@+id/quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="monospace"
            android:text="@string/skilleh"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/skillimage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignLeft="@+id/skilltv2"
            android:layout_alignStart="@+id/skilltv2"
            android:layout_below="@+id/quote"
            android:layout_marginTop="39dp"
            android:src="@drawable/skill" />

        <TextView
            android:id="@+id/skilltv1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/skillimage"
            android:layout_marginTop="24dp"
            android:layout_toEndOf="@+id/i3"
            android:layout_toRightOf="@+id/i3"
            android:fontFamily="sans-serif-smallcaps"
            android:text="SKILLS"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="#ff0099cc"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/skilltv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/skilltv3"
            android:layout_alignStart="@+id/skilltv3"
            android:layout_below="@+id/skillimage"
            android:layout_marginTop="26dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/skilltv2"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="#11ffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/skilltv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/skilltv2"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/skilltv3"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="#11ffff"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/skilltv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/skilltv3"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/skilltv4"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="#11ffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/skilltv5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/skilltv4"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/skilltv5"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="#11ffff"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/skilltv6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/skilltv5"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/skilltv6"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="#11ffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/skilltv7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/skilltv6"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/skilltv7"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="#11ffff"
            android:textSize="16sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/i3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignLeft="@+id/skilltv9"
            android:layout_alignStart="@+id/skilltv9"
            android:layout_below="@+id/skilltv7"
            android:layout_marginTop="30dp"
            android:src="@drawable/projects" />

        <TextView
            android:id="@+id/skilltv8"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/i3"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="29dp"
            android:layout_toEndOf="@+id/i3"
            android:layout_toRightOf="@+id/i3"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/proja"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="#ff0099cc"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:textAllCaps="true"
            android:id="@+id/skilltv9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/skilltv8"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/proj1"
            android:textAlignment="viewStart"
            android:textColor="#11ffff"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/skilltv10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/skilltv9"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/proj2"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="#11ffff"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/skilltv11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/skilltv10"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/proj3"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="#11ffff"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/skilltv12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/skilltv11"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/proj4"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="#11ffff"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/skilltv13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/skilltv12"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/proj5"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textColor="#11ffff"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"/>
    </RelativeLayout>

</ScrollView>