<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lenovo.resumae.About"
    android:background="@mipmap/bla">


    <TextView
        android:id="@+id/toptext"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_above="@+id/tv12"
        android:layout_alignEnd="@+id/tv12"
        android:layout_alignRight="@+id/tv12"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="monospace"
        android:text="do{\nlive_life()\n}while(1==1);"
        android:textAllCaps="false"
        android:textColor="#11ffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv12"
        android:layout_alignBottom="@+id/tv12"
        android:layout_alignLeft="@+id/tv2"
        android:layout_alignStart="@+id/tv2"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Call Me At"
        android:textAllCaps="true"
        android:textColor="#ff0099cc"
        android:textSize="16sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv22"
        android:layout_alignLeft="@+id/tv22"
        android:layout_alignStart="@+id/tv22"
        android:layout_marginBottom="39dp"
        android:autoLink="phone"
        android:fontFamily="sans-serif-smallcaps"
        android:linksClickable="true"
        android:text="@string/contact"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv22"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_toLeftOf="@+id/tv22"
        android:layout_toStartOf="@+id/tv22"
        android:fontFamily="sans-serif-smallcaps"
        android:text="E-Mail id"
        android:textAllCaps="true"
        android:textColor="#ff0099cc"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv22"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv32"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="39dp"
        android:autoLink="email"
        android:fontFamily="serif"
        android:linksClickable="true"
        android:text="@string/mail"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tv1"
        android:layout_alignRight="@+id/tv1"
        android:layout_alignTop="@+id/tv32"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Find Me At"
        android:textAllCaps="true"
        android:textColor="#ff0099cc"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv32"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="79dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/address"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/b1"
        android:layout_alignLeft="@+id/tv2"
        android:layout_alignStart="@+id/tv2"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/webdialogue"
        android:textAllCaps="true"
        android:textColor="#11ffff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/b1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="27dp"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:background="@drawable/button_shape"
        android:onClick="openezhu"
        android:text="@string/ezhu"
        android:textSize="14sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:visibility="visible" />


    </RelativeLayout>

